--- a/includes/header.html
+++ b/includes/header.html
@@ -28,7 +28,7 @@
 <div class="col-xs-12">
 	<div class="row rowPadding">
 		<div class="col-xs-12 col-sm-10">
-			<a href="../default.html" class="header"><h1>Christopher Welte</h1></a>
+			<a href="../index.html" class="header"><h1>Christopher Welte</h1></a>
 			<h2 class="sub-header">Director / Designer</h2>
 			<nav class="myNav rowPadding hidden-xs">
 				<ul class="col-xs-12 nav nav-pills">
