--- a/includes/nav.html
+++ b/includes/nav.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12"> <!--col-sm-7 col-md-6-->
 	<div class="row rowPadding">
 		<div class="col-xs-12 col-sm-6">
-			<a href="../default.html" class="header"><h1>Christopher Welte</h1></a>
+			<a href="../index.html" class="header"><h1>Christopher Welte</h1></a>
 			<h2 class="sub-header">Director / Designer</h2>
 			<nav class="myNav rowPadding">
 				<ul class="col-xs-12 nav nav-pills">
