--- a/includes/bringIt.html
+++ b/includes/bringIt.html
@@ -136,7 +136,7 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-7">
-			<p>LESS</p>
+			<p>SASS/LESS</p>
 		</div>
 		<div class="col-xs-5 text-center">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
