script not working - put in date

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -2,7 +2,7 @@
 	<img src="/images/cmw-logo.svg" alt="Christopher Welte chop" class="img-responsive" />
 </div>
 <div class="copyright">
-	<small><i>&copy; <script type="text/javascript">document.write( new Date().getFullYear() );</script> Christopher M Welte. All work is property of the artist and may not be used without permission.</i></small>
+	<small><i>&copy; 2020 Christopher M Welte. All work is property of the artist and may not be used without permission.</i></small>
 </div>
 
 <div class="col-xs-12 col-sm-6 col-sm-offset-3 rowPadding followMe">
