updated alt and date

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,14 +1,13 @@
 <div class="chop">
-	<img src="/images/cmw-logo.svg" alt="Christopher Welte chop" class="img-responsive" />
+	<img src="/images/cmw-logo.svg" alt="a graphical representation of the artists initials" class="img-responsive" />
 </div>
 <div class="copyright">
-	<small><i>&copy; 2020 Christopher M Welte. All work is property of the artist and may not be used without permission.</i></small>
+	<small><i>&copy; 2021 Christopher M Welte. All work is property of the artist and may not be used without permission.</i></small>
 </div>
 
 <div class="col-xs-12 col-sm-6 col-sm-offset-3 rowPadding followMe">
 	<ul class="list-unstyled list-inline text-center">
 		<li><a href="https://www.instagram.com/c_welte/" target="_blank" title="Follow me on Instagram"><span class="fa fa-instagram fa-2x"></span><br />Instagram</a></li>
 		<li><a href="https://twitter.com/C_Welte" target="_blank" title="Follow me on Twitter"><span class="fa fa-twitter fa-2x"></span><br />Twitter</a></li>
-		<li><a href="https://www.flickr.com/photos/kyftp/" target="_blank" title="Follow me on Flickr"><span class="fa fa-flickr fa-2x"></span><br />Flickr</a></li>
 	</ul>
 </div>
