--- a/includes/header.html
+++ b/includes/header.html
@@ -43,7 +43,7 @@
 			</nav>
 		</div>
 		<div class="hidden-xs col-sm-2">
-			<img src="/images/portrait.jpg" alt="Christopher Welte" class="img-responsive img-circle portrait" />
+			<img src="/images/cmw-icon.png" alt="a graphical abstract illustration of the artist" class="img-responsive img-circle portrait" />
 		</div>
 	</div>
 </div>
