--- a/includes/bringIt.html
+++ b/includes/bringIt.html
@@ -9,7 +9,7 @@
 		<div class="col-xs-7">
 			<p>Art direction</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="4 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
@@ -17,7 +17,7 @@
 		<div class="col-xs-7">
 			<p>Brand management</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="5 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span>
 		</div>
 	</div>
@@ -25,7 +25,7 @@
 		<div class="col-xs-7">
 			<p>Creative direction</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="5 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span>
 		</div>
 	</div>
@@ -33,7 +33,7 @@
 		<div class="col-xs-7">
 			<p>Project management</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="4 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
@@ -43,7 +43,7 @@
 		<div class="col-xs-7">
 			<p>Print production</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="4 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
@@ -51,7 +51,7 @@
 		<div class="col-xs-7">
 			<p>Layout</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="5 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span>
 		</div>
 	</div>
@@ -60,7 +60,7 @@
 		<div class="col-xs-7">
 			<p>Photoshop</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="5 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span>
 		</div>
 	</div>
@@ -69,7 +69,7 @@
 		<div class="col-xs-7">
 			<p>Illustrator</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="5 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span>
 		</div>
 	</div>
@@ -78,7 +78,7 @@
 		<div class="col-xs-7">
 			<p>InDesign</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="4 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
@@ -86,9 +86,25 @@
 	<h3>UI &amp; UX Design</h3>
 	<div class="row">
 		<div class="col-xs-7">
+			<p>Inclusive design</p>
+		</div>
+		<div class="col-xs-5 text-center" aria-label="5 out of 5">
+			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-7">
+			<p>User testing</p>
+		</div>
+		<div class="col-xs-5 text-center" aria-label="4 out of 5">
+			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
+		</div>
+	</div>	
+	<div class="row">
+		<div class="col-xs-7">
 			<p>Wireframing</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="5 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span>
 		</div>
 	</div>
@@ -96,7 +112,7 @@
 		<div class="col-xs-7">
 			<p>Visual design</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="4 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
@@ -104,7 +120,7 @@
 		<div class="col-xs-7">
 			<p>Interactive design</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="3 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
@@ -114,7 +130,7 @@
 		<div class="col-xs-7">
 			<p>HTML/HTML5</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="5 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span>
 		</div>
 	</div>
@@ -122,7 +138,7 @@
 		<div class="col-xs-7">
 			<p>CSS/CSS3</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="4 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
@@ -130,15 +146,15 @@
 		<div class="col-xs-7">
 			<p>Javascript</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="3 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-7">
-			<p>SASS/LESS</p>
+			<p>Bootstrap/SASS/LESS</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="4 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
@@ -146,7 +162,7 @@
 		<div class="col-xs-7">
 			<p>Multi-device strategy</p>
 		</div>
-		<div class="col-xs-5 text-center">
+		<div class="col-xs-5 text-center" aria-label="5 out of 5">
 			<span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="blue-dot"></span><span class="gray-dot"></span>
 		</div>
 	</div>
